# bot-rs

./: Cargo.toml  README.md
examples/: agent_bot.rs
src/: config.rs  event_client.rs  lib.rs  main.rs
src/models/: auth.rs  client_error.rs  error.rs  event.rs  message.rs  mod.rs  server_error.rs
src/services/: client.rs  mod.rs  server.rs  websocket.rs
src/services/websocket/: connection.rs  error.rs  mod.rs  state.rs  tests.rs
src/utils/: validation.rs
