[package]
name = "qq-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
ed25519-dalek = "2.2.0"
futures-util = "0.3.31"
hex = "0.4.3"
langchain = { path = "../langchain-rs/crates/langchain" }
langchain_core = { path = "../langchain-rs/crates/langchain_core" }
langchain_openai = { path = "../langchain-rs/crates/langchain_openai" }
num_enum = "0.7.5"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenv = "0.15.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
rand = "0.9.2"

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["test-util"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
